Fixed cards alignment bug. Tweaked size for small screens

--- a/app/styles/main/_layout.scss
+++ b/app/styles/main/_layout.scss
@@ -1,3 +1,9 @@
+@media all and (max-width: 340px) {
+  body {
+    font-size: 12px;
+  }
+}
+
 .main {
   width: 100vw;
   height: 100vh;
